web/components/FormObject/_form-object.scss
.sq-form-object {
  position: relative;
  &__expand-collapse {
    margin-top: 4px;
  }
  &__float-full {
    position: absolute;
    top: 0;
    left: -30px;
  }
  &__item-wrap {
    display: flex;
  }
  &__actions {
    display: flex;
  }
  .sq-form__field {
    margin-bottom: 8px;
  }
  &__top-actions {
    display: flex;
    align-items: center;
  }
  .sq-form--object-mode {
    
    > .sq-form_fields {
      display: flex;
      flex-direction: column;
      width: 100%;
      > .sq-form__field:nth-child(1) {
        position: relative;
        padding-left: 10px;
        &:before {
          content: " ";
          position: absolute;
          top: 4px;
          left: -4px;
        }
        &:after {
          content: ":";
          position: absolute;
          top: 4px;
          right: 10px;
        }
      }
      > .sq-form__field:nth-child(2) {
        margin-left: 20px;
        border-left: solid 1px #e2e2e2;
        padding-left: 10px;
      }
    }
  }
  .sq-form--keyval-mode {
    > .sq-form_fields {
      display: flex;
      width: 100%;
      > .sq-form__field:nth-child(1) {
        position: relative;
        padding-left: 10px;
        &:before {
          content: " ";
          position: absolute;
          top: 4px;
          left: -4px;
        }
        &:after {
          content: ":";
          position: absolute;
          top: 4px;
          right: 10px;
        }
        max-width: 150px;
        min-width: 50%;
        padding-bottom: 4px;
      }
      > .sq-form__field:nth-child(2) {
        padding-left: 10px;
        padding-bottom: 4px;
        flex-grow: 1;
      }
    }
  }
  &--full-screen {
    position: fixed;
    padding: 20px;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    z-index: $z-index-level-topest;
    background-color: white;
    .sq-form-object__float-full {
      position: static;
    }
  }
}

